Fix T43904: calc_vert_angle returns wrong value

This was mis-named, rename to `calc_edge_angle`
and allow a fallback value in the case when the vert doesn't have 2-edges.